--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.21.1",
+        "chart.js": "^2.9.4",
+        "leaflet": "^1.7.1",
         "normalize.css": "^8.0.1",
+        "numeral": "^2.0.6",
         "react": "^17.0.1",
+        "react-chartjs-2": "^2.11.1",
         "react-dom": "^17.0.1",
+        "react-leaflet": "^3.0.5",
+        "react-perfect-scrollbar": "^1.5.8",
         "react-scripts": "4.0.1",
+        "react-window": "^1.8.6",
         "uuid": "^8.3.2",
         "web-vitals": "^0.2.4"
     },
