added map graph and change status on click

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.2",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -18,7 +17,7 @@
         "react-leaflet": "^3.0.5",
         "react-perfect-scrollbar": "^1.5.8",
         "react-scripts": "4.0.1",
-        "react-window": "^1.8.6",
+        "react-windowed-select": "^2.0.4",
         "uuid": "^8.3.2",
         "web-vitals": "^0.2.4"
     },
